Add support for getting remote meetups
